--- a/index.html
+++ b/index.html
@@ -47,10 +47,15 @@
 <div id="content-wrapper">
   <div class="inner clearfix">
     <section id="main-content">
-<p><a href="https://docs.google.com/document/d/19Ybv7Nta_ddmVWOibFEgS2HeytITaZjZMm_zAtRwDJs/">April 9: Introduction to BASH, conda, and the Wynton cluster</a> -&gt;<a href="https://ucsf.box.com/s/f0id1tikk9ilzid583u0sl5hfddwxbr3">Download Recording</a></p>
-<p><a href="qiime2/index.html">April 16: QIIME2 Workshop</a> -&gt;<a href="https://ucsf.box.com/s/ixcsdzdl2qkdmpknek8dcsu95nvs8su4">Download Recording Part 1</a> -&gt;<a href="https://ucsf.box.com/s/qjuj49russ54ocd6xh8u2k49zf5catwr">Download Recording Part 2</a></p>
-<p><a href="https://cnoecker.github.io/R-ecology-lesson/index.html">April 23: Introduction to R and R Studio</a> -&gt;<a href="https://ucsf.box.com/s/nj2uo48acc19l26rpibuipuae4b2t1yo">Download Recording</a></p>
+<p><a href="https://docs.google.com/document/d/19Ybv7Nta_ddmVWOibFEgS2HeytITaZjZMm_zAtRwDJs/">April 9: Introduction to BASH, conda, and the Wynton cluster</a><br />
+-&gt;<a href="https://ucsf.box.com/s/f0id1tikk9ilzid583u0sl5hfddwxbr3">Download Recording</a></p>
+<p><a href="qiime2/index.html">April 16: QIIME2 Workshop</a><br />
+-&gt;<a href="https://ucsf.box.com/s/ixcsdzdl2qkdmpknek8dcsu95nvs8su4">Download Recording Part 1</a><br />
+-&gt;<a href="https://ucsf.box.com/s/qjuj49russ54ocd6xh8u2k49zf5catwr">Download Recording Part 2</a></p>
+<p><a href="https://cnoecker.github.io/R-microbiome-workshop/">April 23: Introduction to R and R Studio</a><br />
+-&gt;<a href="https://ucsf.box.com/s/nj2uo48acc19l26rpibuipuae4b2t1yo">Download Recording</a></p>
 <p><a href="rvis/index.html">April 30: Analyzing and Visualizing Microbiome Data in R</a></p>
+<p><a href="https://cnoecker.github.io/R-microbiome-workshop/overviewPresOrgTools.html#">May 7: Version control &amp; managing computational workflows</a></p>
     </section>
   </div>
 </div>
