Add links to final workshops

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 -&gt;<a href="https://ucsf.box.com/s/qjuj49russ54ocd6xh8u2k49zf5catwr">Download Recording Part 2</a></p>
 <p><a href="https://cnoecker.github.io/R-microbiome-workshop/">April 23: Introduction to R and R Studio</a><br />
 -&gt;<a href="https://ucsf.box.com/s/nj2uo48acc19l26rpibuipuae4b2t1yo">Download Recording</a></p>
-<p><a href="rvis/index.html">April 30: Analyzing and Visualizing Microbiome Data in R</a></p>
-<p><a href="https://cnoecker.github.io/R-microbiome-workshop/overviewPresOrgTools.html#">May 7: Version control &amp; managing computational workflows</a></p>
+<p><a href="rvis/index.html">April 30: Analyzing and Visualizing Microbiome Data in R</a><br />
+-&gt;<a href="https://ucsf.box.com/s/47i0calza5ecwtkatbo2n9a17ogs2whs">Download Recording</a></p>
+<p><a href="https://cnoecker.github.io/R-microbiome-workshop/overviewPresOrgTools.html#">May 7: Version control &amp; managing computational workflows</a><br />
+-&gt;<a href="https://ucsf.box.com/s/wh0bhpchupt3ffpsp6jn80ljksg949rf3">Download Recording</a></p>
     </section>
   </div>
 </div>
